# novafetch

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
PKGBUILD/: PKGBUILD
src/: battery.rs  cpu.rs  desktop.rs  disk.rs  disks.rs  error.rs  gpu.rs  host.rs  kernel.rs  main.rs  memory.rs  motherboard.rs  os.rs  packages.rs  parser.rs  resolution.rs  shell.rs  temp.rs  terminal.rs  theme.rs  uptime.rs
