[package]
name = "novafetch"
version = "0.3.0"
authors = ["Víctor Javier Díaz Garrido <vjdiaz@proton.me>"]
edition = "2021"
description = "A command-line system information fetch tool for Linux"
license = "GPL-3.0"
repository = "https://github.com/UnversedBlood/novafetch"
keywords = ["fetch", "system-info", "cli", "linux"]
categories = ["command-line-utilities"]
rust-version = "1.56"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
